# Assimulo

./: .gitignore  CHANGELOG  CLAUDE.md  CMakeLists.txt  Dockerfile  INSTALL  MANIFEST  MANIFEST.in  Makefile  README  README.md  pyproject.toml  setup.cfg  setup.py  setup_from_binary.py  setup_source.py
.devcontainer/: devcontainer.json
.devcontainer/sundials-2.7.0/: devcontainer.json
.devcontainer/sundials-3.2.0/: devcontainer.json
.devcontainer/sundials-7.1.1/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
branches/Assimulo-1.0/: INSTALL
branches/Assimulo-1.2.x/: setup_from_binary.py
branches/Assimulo-1.4.x/: MANIFEST.in  setup_from_binary.py  setup_source.py
branches/Assimulo-2.0.x/: CHANGELOG  setup.py
branches/Assimulo-2.1.x/: setup.py
branches/Assimulo-2.2.x/: CHANGELOG
branches/Assimulo-2.4.x/: setup.py
branches/Assimulo-2.6.x/: CHANGELOG
branches/Assimulo-2.8.x/: INSTALL  setup.py
branches/Assimulo-2.9.x/: setup.py
branches/Assimulo-3.0.x/: CHANGELOG  setup.py
branches/Assimulo-CoSim-201209/: README
branches/Assimulo-Delay-201202/: setup.py
branches/Assimulo-EventHandling-201304/: setup.py
branches/Assimulo-Py3/: setup.py
branches/Assimulo-b1.02/: README  setup.py
branches/X-Extrapolationmethods-2014-04/: setup.py
branches/test_newsetup/: setup.py
cmake/: FindSUNDIALS.cmake  FindSuperLU_MT.cmake
doc/sphinx/: Makefile  how-to-sphinx
examples/: __init__.py  cvode_basic.py  cvode_basic_backward.py  cvode_gyro.py  cvode_stability.py  cvode_with_disc.py  cvode_with_initial_sensitivity.py  cvode_with_jac.py  cvode_with_jac_sparse.py  cvode_with_jac_spgmr.py  cvode_with_parameters.py  cvode_with_parameters_fcn.py  cvode_with_parameters_modified.py  cvode_with_preconditioning.py  dasp3_basic.py  difex_basic.py  dopri5_basic.py  dopri5_with_disc.py  euler_basic.py  euler_vanderpol.py  euler_with_disc.py  eulex_basic.py  eulex_difex1_rk34.py  eulsim_basic.py  eulsim_metan1_bdf_pendulum.py  explicit_basic.py  glimda_vanderpol.py  ida_basic_backward.py  ida_with_disc.py  ida_with_initial_sensitivity.py  ida_with_jac.py  ida_with_jac_spgmr.py  ida_with_parameters.py  ida_with_user_defined_handle_result.py  kinsol_basic.py  kinsol_ors.py  kinsol_with_jac.py  lsodar_bouncing_ball.py  lsodar_vanderpol.py  lsodar_with_disc.py  (+24 more)
releases/: Assimulo-2.1.1.win32-py2.7.msi  Assimulo-2.1.win32-py2.7.msi  Assimulo-2.2.win32-py2.7.msi  Assimulo-2.3.win32-py2.7.msi  Assimulo-2.4.win32-py2.7.msi  Assimulo-2.5.1.win32-py2.7.msi  Assimulo-2.5.win32-py2.7.msi  Assimulo-2.6.win32-py2.7.msi  Assimulo-2.7b1.win32-py2.7.msi
src/: Explicit_ODE.py  Implicit_ODE.py  ODE.py  Problem.py  Sundials.py  __init__.py  algebraic.pxd  algebraic.pyx  constants.pxi  exception.py  explicit_ode.pxd  explicit_ode.py  explicit_ode.pyx  implicit_ode.pxd  implicit_ode.py  implicit_ode.pyx  kinsol.py  ode.pxd  ode.py  ode.pyx  ode_event_locator.c  ode_event_locator.h  problem.pxd  problem.pyx  problem_algebraic.py  special_systems.pyx  sundials.py  support.pxd  support.pyx
src/lib/: kinpinv.c  kinpinv.h  kinslug.c  kinslug.h  kinsol_jmod.h  kinsol_jmod_impl.h  kinsol_jmod_wSLU.c  radau_core.py  reg_routines.h  sundials_callbacks.pxi  sundials_callbacks_ida_cvode.pxi  sundials_callbacks_kinsol.pxi  sundials_constants.pxi  sundials_core.pxd  sundials_core.pxi  sundials_core.pyx  sundials_includes.pxd  sundials_kinsol_core.pxd  sundials_kinsol_core.pxi  sundials_kinsol_core.pyx  sundials_kinsol_core_wSLU.pxi  sundials_kinsol_core_wSLU.pyx  sundials_kinsol_includes.pxi
src/solvers/: __init__.py  __init__.py~  _radau5_py.py  cvode.py  dasp3.py  difex1.py  euler.py  euler.pyx  eulex.py  eulsim.py  extrapack.py  glimda.py  ida.py  kinsol.pyx  metan1.py  mexax.py  odassl.py  odepack.py  radar5.py  radau5.pxd  radau5.py  radau5.pyx  rosenbrock.py  runge_kutta.py  sdirk_dae.pyx  sundials.pyx
tags/Assimulo-1.1b1/: INSTALL  setup.py  setup_source.py
tags/Assimulo-1.2b1/: setup_from_binary.py
tags/Assimulo-1.4b1/: README  setup_from_binary.py
tags/Assimulo-1.4b2/: setup_from_binary.py
tags/Assimulo-1.4b3/: CHANGELOG
tags/Assimulo-2.0b1/: MANIFEST.in  setup.py
tags/Assimulo-2.1.1/: CHANGELOG  INSTALL
tags/Assimulo-2.3/: CHANGELOG  setup.py
tags/Assimulo-2.4/: setup.py
tags/Assimulo-2.6/: setup.py
tags/Assimulo-2.8/: setup.py
tags/Assimulo-2.9/: CHANGELOG
tags/Assimulo-3.0/: CHANGELOG  MANIFEST.in  setup.py
tests/: __init__.py  conftest.py  test_Explicit_ODE.py  test_Implicit_ODE.py  test_KINSOL.py  test_ODE.py  test_Radau.py  test_Sundials.py  test_examples.py  test_explicit_ode.py  test_implicit_ode.py  test_ode.py  test_radau.py  test_solvers.py  test_sundials.py
tests/example_tests/: test_cvode_completed_step.py  test_cvode_parameters.py  test_explicit_solvers.py  test_explicit_time_event.py  test_handle_result.py  test_ida_disc.py  test_post_process.py  test_radau_vanderpol.py
tests/solvers/: test_euler.py  test_glimda.py  test_kinsol.py  test_mexax-standalone.py  test_mexax.py  test_mexax_standalone.py  test_odassl.py  test_odepack.py  test_radau5.py  test_rosenbrock.py  test_rungekutta.py  test_sundials.py  utils.py
trunk/: CHANGELOG  MANIFEST.in  README  setup.py  setup_source.py
trunk/examples/: __init__.py  cvode_basic.py  cvode_basic_backward.py  cvode_gyro.py  cvode_with_disc.py  cvode_with_initial_sensitivity.py  cvode_with_jac.py  cvode_with_jac_spgmr.py  cvode_with_parameters.py  cvode_with_parameters_modified.py  cvode_with_preconditioning.py  dasp3_basic.py  dopri5_with_disc.py  euler_basic.py  euler_vanderpol.py  euler_with_disc.py  explicit_basic.py  glimda_vanderpol.py  ida_with_disc.py  ida_with_jac.py  ida_with_parameters.py  kinsol_basic.py  kinsol_with_jac.py  lsodar_bouncing_ball.py  lsodar_vanderpol.py  lsodar_with_disc.py  mech_system_pendulum.py  radau5dae_time_events.py  radau5dae_vanderpol.py  radau5ode_vanderpol.py  radau5ode_with_disc.py  radau_vanderpol.py  rodasode_vanderpol.py  rungekutta34_basic.py  rungekutta34_with_disc.py  rungekutta4_basic.py  test_CVode_Jacobian.py  (+6 more)
(+667 files in other folders)
